<resources>
    <string name="app_name">Gallery</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="create_account">No account yet? Create one.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
</resources>
